crates/keron-lang/tests/corpus/errors/check/map_annotation_value_mismatch.keron
val m: Map<String, Int> = {"a": "wrong"}
